5/6/11 
- Implmented a post template in the templates folder
- Modified generator.php to break out tagged data in the beginning of file
- Modified generator.php to create the HTML document based on the slug

4/27/11 - POC 2
- Modified generator.php to properly generate HTML files
- Modified generator.php to properly generate a HTML filename
- Cleaned up and commented code better


4/26/11
- Addition of output and input text files to keep the folder structure proper in git


4/26/11 - POC 1
 - Initial creation of "generator.php" with the following features:
	* Looks for any text file in the ./input folder (matches any .txt)
	* Runs text though Markdown
	* Generates a file in the ./output folder with the same name as the text file with the markdown (XHTML) output
	* Will do this for any number of .txt files in the ./input folder
	

4/22/11
 - Implemented Extended Markdown from http://michelf.com/projects/php-markdown/
   (really, all i did was add the file to the git repo)
 - Setup Initial folder structure
 - Loaded a XHTML 1.0 STRICT Template into the templates folder to start building with
 
 
 
 
 
 Notes and consideration points:
 * I need to consider what style of HTML i shoot for, HTML 5? XHTML 1.0? 1.1? I think XHTML 1.0 might be
   best, but i need to find out for sure. I'm pretty sure that markdown produces XHTML 1.0 strict, but i need to be sure.
   