@@ -4,8 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-
-<title>Conforming XHTML 1.0 Strict Template</title>
+<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+<title></title>
 
 </head>
 
